# aula_17_bootcamp_python

./: .gitignore  README.md  desafio.db  desafio.py  exemplo_01.py  pyproject.toml  select_desafio.py
