[project]
name = "aula-17-bootcamp-python"
version = "0.1.0"
description = "Trabalhando com SQLAlchemy"
authors = [
    {name = "Pedro Sanches",email = "sanchesmil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
